--- a/plugins/template/CMakeLists.txt
+++ b/plugins/template/CMakeLists.txt
@@ -5,7 +5,7 @@
 # mkdir build;
 # cd build;
 # cmake ../ [-G see cmake --help for options] [-DMPI_BUILD=true] \
-#  [-DCMAKE_BUILD_TYPE=Debug | Release | RelWithDebInfo | MinSizeRel]
+#  [-DCMAKE_BUILD_TYPE= Debug | Release | RelWithDebInfo | MinSizeRel]
 #  [-DEMERGENT_PLUGIN_TYPE= User | System] # where to install plugin
 #  [-DCMAKE_VERBOSE_MAKEFILE=ON | OFF] # useful for tracking down issues sometimes
 #
@@ -17,65 +17,69 @@
 #    found first!
 #
 
-# To configure this file for a new plugin as a plugin programmer, skip to Step 2
+# To configure this file for a new plugin as a plugin programmer, skip to Step 3
 
 ################################################################
 # Step 0: ensure we have the right version of cmake -- this
 # has to go here at the top of this file otherwise cmake complains
 CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0 FATAL_ERROR)
 
-################################################################
-# Step 1: Attempt to find the emergent share directory
-# from which everything else can be derived -- you do not typically
-# need to edit this code, so skip to step 2 unless you have a problem
-# with it finding the installed emergent code
 
-# note: you can add weird paths here in case it is not found on a standard path
-# find the path, in terms of an equivalent to CMAKE_INSTALL_PREFIX
+################################################################
+# Step 1: Find the emergent share (application) directory
+# Normal default installation locations should be found, but you
+# can edit these paths to add a non-standard location 
+file(TO_CMAKE_PATH "$ENV{EMERGENTDIR}" EMERGENTDIR)
 if (WIN32)
-  find_path(EMERGENT_INSTALL_PREFIX Emergent/README PATHS
-    C:/
-    "C:/Program Files"
-    $ENV{EMERGENTDIR}/..
-    NO_DEFAULT_PATH
-  )
+  #note: the normal case is for the ENV var to exist...
+  if (${EMERGENTDIR})
+    set(EMERGENT_SHARE_DIR "${EMERGENTDIR}")
+  else (${EMERGENTDIR})
+    find_path(EMERGENT_SHARE_DIR README PATHS
+      "C:/Program Files/Emergent"
+      C:/Emergent
+      "C:/Program Files (x86)/Emergent" # W32 on 64, should be rare
+      NO_DEFAULT_PATH
+    )
+  endif (${EMERGENTDIR})
 else (WIN32)
-  find_path(EMERGENT_INSTALL_PREFIX share/Emergent/README PATHS
-    /usr
-    /usr/local
-    /opt/local
+  find_path(EMERGENT_SHARE_DIR README PATHS
+    /usr/share/Emergent
+    /usr/local/share/Emergent
+    /opt/local/share/Emergent
     NO_DEFAULT_PATH
   )
 endif (WIN32)
 
-if(EMERGENT_INSTALL_PREFIX)
-  message(STATUS "Found Emergent Install Prefix Directory Successfully!!")
-  message(STATUS "EMERGENT_INSTALL_PREFIX is: ${EMERGENT_INSTALL_PREFIX}")
-else(EMERGENT_INSTALL_PREFIX)
+if(EMERGENT_SHARE_DIR)
+  message(STATUS "Found Emergent Application Directory Successfully!!")
+  message(STATUS "EMERGENT_SHARE_DIR is: ${EMERGENT_SHARE_DIR}")
+else(EMERGENT_SHARE_DIR)
   message(STATUS "Could not find installed Emergent share directory -- cannot proceed further")
-  message(FATAL_ERROR "Edit Step 3 of CMakeLists.txt file to include unusual paths for searching")
-endif(EMERGENT_INSTALL_PREFIX)
+  message(FATAL_ERROR "Edit Step 1 of CMakeLists.txt file to include unusual paths for searching")
+endif(EMERGENT_SHARE_DIR)
 
 
 ################################################################
-# Step 1: set build params
+# Step 2: set build params
 # this includes all necessary setup stuff to setup the make process
 include(${EMERGENT_SHARE_DIR}/CMakeModules/EmergentPluginSetup.cmake)
 
-################################################################
-# Step 2: set all the basic parameters about the project
-#
-# IMPORTANT: plugin programmer: this is stuff you may need to modify
-# or extend, especially if you add additional source files or
-# need to include or link to additional libraries not part of the
-# Emergent prerequisites
 
-# name the project: this will be the name of the plugin
+################################################################
+# Step 3: set all the basic parameters about the project
+#
+# IMPORTANT: plugin programmer: this is the section you may need
+# to modify or extend, especially if you add additional source
+# files or need to include or link to additional libraries not
+# part of the Emergent prerequisites
+
+# name the project: this will be the name of the plugin and for
+# consistency should be the same as the folder in which it lives
 PROJECT(template)
 
-#### version setting: you are responsible for your own versioning and it does not
-#### have to correspond with the emergent versions, though that wouldn't hurt
-
+# version setting: you are responsible for your own versioning and it does not
+# have to correspond with the emergent versions, though that wouldn't hurt
 set(PLUGIN_VERSION_MAJOR "1")
 set(PLUGIN_VERSION_MINOR "0")
 set(PLUGIN_VERSION_PATCH "0")
@@ -89,6 +93,9 @@ set(plugin_HEADS
   template_def.h
   template_pl.h
   template.h
+# if you create Qt or Inventor-based classes, put them in template_qtso.*
+# and uncomment the following line:
+# template_qtso.h
 )
 
 # list all the .cpp source files that will be compiled into the plugin
@@ -96,12 +103,15 @@ set(plugin_HEADS
 set(plugin_SRCS
   template_pl.cpp
   template.cpp
+# if you create Qt or Inventor-based classes, put them in template_qtso.*
+# and uncomment the following line:
+# template_qtso.cpp
 )
 
 # list the project headers that are run through maketa (the Emergent
 # type scanning system) 
 set(plugin_HEADS_MAKETA
-  ta_TA_type.h
+  ${EMERGENT_INCLUDE_DIR}/Emergent/ta_TA_type.h
 # IMPORTANT: if your plugin uses network code, add the appropriate
 # headers after the ta_TA, ex, for a Leabra-based plugin, add these:
 # network_TA_type.h 
@@ -115,6 +125,9 @@ set(plugin_HEADS_MAKETA
 # just ignore it with a warning that "no QObject classes were found"
 set(plugin_HEADS_MOC
   template_pl.h
+# if you create Qt or Inventor classes, put them in template_qtso.*
+# and uncomment the following line:
+# template_qtso.h
 )
 
 # all the files necessary to compile the plugin -- used for install
@@ -122,15 +135,26 @@ set(plugin_FILES
   ${plugin_HEADS}
   ${plugin_SRCS}
   CMakeLists.txt
-  build_plugin.sh
-  build_plugin_dbg.sh
-  )
+# TODO: if you have any additional files needed by the plugin, such as
+# media files, documentation, etc., add them here so they get installed
+)
+
+################################################################
+# Step 3a: find any additional libraries that are needed, if any
+# assuming it is on known path, 
+# else see {root}/CMakeModules/FindGSL.cmake for example
+
+# the following lines, commented out, are examples from audioproc plugin
+#find_library(SNDFILE_LIBRARY sndfile)
+#message(STATUS SNDFILE_LIBRARY: ${SNDFILE_LIBRARY})
+#set(EMERGENT_PLUGIN_EXTRA_LIBRARIES sndfile)
 
 # NOTE to plugin programmer: you should be done now!  Everything below
 # is standard boilerplate code that you should not need to edit.
 
+
 ################################################################
-# Step 3: now use cmake modules from the installed code to 
+# Step 4: now use cmake modules from the installed code to 
 # do all the magic building of stuff for our plugin
 
 # this grabs all the magic cmake stuff for actually making according to
