--- a/src/emergent/lib/CMakeLists.txt
+++ b/src/emergent/lib/CMakeLists.txt
@@ -65,7 +65,7 @@ endif (WIN32)
 
 if (WIN32)
   install(TARGETS emergentlib
-    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
     RUNTIME DESTINATION bin
   )
 else (WIN32)
