--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,10 +56,16 @@ include(CMakeModules/EmergentDefaults.cmake)
 # we build the lib/bin targets up into the root folder, so
 # we can run and debug immediately in-place
 # need to use binary dir to preserve clean sep btwn src and build
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib) #for Win
-
+# slightly different on Windows -- note on Win there will automatically
+# be {CMAKE_RELEASE_TYPE} subfolder added
+if (WIN32)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
+  set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib) #for Win
+else (WIN32)
+  set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+  set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+endif (WIN32)
 
 ################################################################
 # Step 3: misc global stuff: paths, finding packages etc
