mini tweaks for plugins

--- a/plugins/template/CMakeLists.txt
+++ b/plugins/template/CMakeLists.txt
@@ -33,26 +33,27 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0 FATAL_ERROR)
 if (WIN32)
   file(TO_CMAKE_PATH "$ENV{EMERGENTDIR}" EMERGENTDIR)
   #note: on Windows the normal case is for the ENV var to exist...
-  if (${EMERGENTDIR})
+  if ("${EMERGENTDIR}")
     set(EMERGENT_SHARE_DIR "${EMERGENTDIR}")
-  else (${EMERGENTDIR})
+  else ("${EMERGENTDIR}")
     find_path(EMERGENT_SHARE_DIR README PATHS
       "C:/Program Files/Emergent"
       C:/Emergent
       "C:/Program Files (x86)/Emergent" # W32 on 64, should be rare
       NO_DEFAULT_PATH
     )
-  endif (${EMERGENTDIR})
+  endif ("${EMERGENTDIR}")
 else (WIN32)
   set(EMERGENT_SHARE_DIR $ENV{EMERGENT_SHARE_DIR})
-  if (NOT ${EMERGENT_SHARE_DIR})
+  if (NOT "${EMERGENT_SHARE_DIR}")
     find_path(EMERGENT_SHARE_DIR README PATHS
       /usr/share/Emergent
       /usr/local/share/Emergent
       /opt/local/share/Emergent
+      /opt/share/Emergent
       NO_DEFAULT_PATH
     )
-  endif (NOT ${EMERGENT_SHARE_DIR})
+  endif (NOT "${EMERGENT_SHARE_DIR}")
 endif (WIN32)
 
 if(EMERGENT_SHARE_DIR)
