--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,7 +253,7 @@ install(FILES ${OUR_CMAKE_MOD_FILES}
 
 #plugin template files NOTE: prolly a more elegant way to make this list...
 set(PLT "plugins/template")
-install(FILES ${PLT}/CMakeLists.txt ${PLT}/NOBUILD ${PLT}/NOUNINSTALL 
+install(FILES ${PLT}/CMakeLists.txt ${PLT}/NOBUILD ${PLT}/configure 
   ${PLT}/template_def.h
   ${PLT}/template.h ${PLT}/template.cpp
   ${PLT}/template_pl.h ${PLT}/template_pl.cpp
